# Territories

./: .angular-cli.json  .gitignore  LICENSE  README.md  package-lock.json  package.json
api/: api.cabal  app.cfg.example  territories.cabal
api/db/: connection.cfg.example  setup.sql
api/src/: Auth.hs  Database.hs  Main.hs  Types.hs
nbproject/: project.properties  project.xml
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  territory.ts
src/app/auth/: auth-guard.service.ts  auth.service.ts  token.interceptor.ts
src/app/callback/: callback.component.ts
src/app/home/: home.component.css  home.component.html  home.component.ts
src/app/territory/: territory.component.css  territory.component.html  territory.component.ts  territory.service.ts
