Name:                territories
Version:             0.1
Synopsis:            Territories API
Description:         Serves to http://localhost:8000
License:             AllRightsReserved
Author:              Castle Kerr
Maintainer:          castlekerr@hotmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable territories
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.1,
    mysql-haskell,
    io-streams,
    text,
    base64-bytestring,
    base16-bytestring,
    aeson,
    lens-aeson,
    configurator,
    jose,
    wreq,
    lens

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
